import { IModelType, INamedItem } from './IModelType';
import { IValidationResult } from './IValidationResult';
import { IFieldArgs, IField } from './IField';
import { Rule } from '../rule';
import { IMutationContext } from './IMutationContext';
import { IValidator } from './IValidator';
import { Record, Map, Set } from 'immutable';
import { ArrayToMap, ArrayToSet } from '../model/utils';
import { IPackagedItem } from './IPackagedItem';

export interface IMutationACL {
  readonly execute: string[];
}

export interface IMutationACLStore {
  readonly execute: Set<string>;
}

export interface IMutationMetaData {
  readonly acl?: IMutationACL;
}

export interface IMutationMetaDataStore {
  readonly acl?: IMutationACLStore;
}

export interface IMutationStore extends IMutationMetaDataStore, INamedItem {
  args: Map<string, IFieldArgs>;
  payload: Map<string, IFieldArgs>;
}

export interface IMutationInit extends IMutationMetaData, INamedItem {
  args: IFieldArgs[];
  payload: IFieldArgs[];
}

export interface IMutationACLTransform {
  execute: ArrayToSet<string>;
}

export interface IMutationTransform {
  args: ArrayToMap<IFieldArgs>;
  payload: ArrayToMap<IFieldArgs>;
  acl: IMutationACLTransform;
}

export interface IMutation extends IModelType, IPackagedItem {
  readonly modelType: 'mutation';
  readonly args: Map<string, IFieldArgs>;
  readonly payload: Map<string, IFieldArgs>;
}

