import { IPackage } from './IPackage';

export interface IPackagedItem {
  readonly package: IPackage;
}
